# SAIVerse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  action_handler.py  action_priority.json  app_state.py  buildings.py  check_memorydb.py  cities.json  city_manager.py  conversation_manager.py  current_task.md  data_paths.py  debug_model_config.py  emotion_module.py  history_manager.py  knowledge_graph.py  llm_clients.py  llm_router.py  logging_config.py  main.py  media_summary.py  media_utils.py  model_configs.py  models.json  occupancy_manager.py  persona_core.py  pyproject.toml  remote_persona_proxy.py  requirements-dev.txt  requirements-gpu.txt  requirements-local-llm.txt  requirements.txt  router.py  ruff.toml  saiverse_main.db  saiverse_manager.py  (+17 more)
.github/: FUNDING.yml
ai_sessions/: personas.json
api/: deps.py  main.py  security.py
buildings/: __init__.py  air_room.py  deep_think_room.py  deep_think_room_prompt.txt  user_room.py  user_room_prompt.txt
builtin_data/: cities.json  seed_data.json
database/: api_server.py  backup.py  db_manager.py  migrate.py  models.py  paths.py  sample_API_Command.txt  seed.py  session.py
discord_gateway/: auth.py  client.py  config.py  gateway_service.py  integration.py  mapping.py  orchestrator.py  permissions.py  pyproject.toml  pyproject.toml.bak  requirements-dev.txt  runtime.py  saiverse_adapter.py  translator.py  visitors.py
docs/: RUNBOOK.md  architecture.md  claude_thinking.md  current_task.md  database_design.md  diary_codex_250824_cognee_ingest.md  environment_variables.md  index.md  item_system_plan.md  llama_cpp_integration.md  memopedia.md  playbook_dryrun_report_20260212.md  playbook_manual_selection_design.md  release_manual.md  release_plan_feb2026.md  roadmap.md  sea_integration_plan.md  sea_node_types.md  searxng_setup.md  session_reflection_2025-12-03_sidebar_detail_panel.md  stelis_thread_design.md  technical_debt_review_20260320.md  test_environment.md  test_manual.md  third_party_licenses.md
docs_legacy/: database_design.md  gpu_setup_wsl2.md  item_types_expansion_spec.md  memopedia.md  roadmap.md  sea_integration_plan.md  session_reflection_2025-11-28_ui_improvements.md  session_reflection_2025-12-06_item_modal_implementation.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
integrations/: cognee_memory.py
llm_clients/: __init__.py  anthropic.py  anthropic_request_builder.py  anthropic_response_parser.py  anthropic_retry_policy.py  base.py  exceptions.py  factory.py  gemini.py  gemini_utils.py  llama_cache.py  llama_cpp.py  nvidia_nim.py  ollama.py  openai.py  openai_codex.py  openai_errors.py  openai_message_preparer.py  openai_reasoning.py  openai_runtime.py  schema_utils.py  utils.py  xai.py  xai_schema_utils.py
manager/: __init__.py  admin.py  background.py  blueprints.py  gateway.py  history.py  initialization.py  items.py  persona.py  persona_events.py  runtime.py  sds.py  state.py  user_state.py  visitors.py
memory_core/: __init__.py  config.py  document.md  embeddings.py  emotion.py  llm.py  organizer.py  pipeline.py  retriever.py  schemas.py  (+2 more)
(+1017 files in other folders)
