[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saiverse"
dynamic = ["version"]
description = "Multi-agent AI system where autonomous AI personas inhabit a virtual world"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "maha0525" },
]
keywords = ["ai", "multi-agent", "llm", "autonomous-agents", "virtual-world"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/maha0525/SAIVerse"
Repository = "https://github.com/maha0525/SAIVerse"
Issues = "https://github.com/maha0525/SAIVerse/issues"

# Tool configs (merged from discord_gateway/pyproject.toml)
[tool.black]
line-length = 100

# Ruff configuration is in ruff.toml (single source of truth)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Smoke tests run without dependencies; other tests need full environment
markers = [
    "smoke: Quick tests without external dependencies",
]

[tool.setuptools]
packages = ["saiverse"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
